Closed Bug 1789560 Opened 3 years ago Closed 3 years ago

[s390x] error: typedef redefinition with different types ('__float_t' (aka 'float') vs 'double')

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox104 --- unaffected
firefox105 --- wontfix
firefox106 --- wontfix
firefox107 --- fixed

People

(Reporter: glandium, Assigned: arai)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

ERROR -  /builds/worker/checkouts/gecko/modules/fdlibm/src/math_private.h:36:21: error: typedef redefinition with different types ('__float_t' (aka 'float') vs 'double')
INFO -  typedef __float_t   float_t;
INFO -                      ^
INFO -  /builds/worker/fetches/sysroot-s390x-linux-gnu/usr/include/math.h:152:16: note: previous definition is here
INFO -  typedef double float_t;
INFO -                 ^
INFO -  1 error generated.

Set release status flags based on info from the regressing bug 1595259

:arai, since you are the author of the regressor, bug 1595259, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

what does typedef double float_t imply in the system?
what are the size of float and double, and what's the expectation for float and float_t?

I think, the error itself can be avoided by just removing the typedef __float_t float_t; line, given there's no consumer of float_t itself.
my concern is __float_t, that's used by the following:

https://searchfox.org/mozilla-central/rev/fb95a6dc3db347664f89998ab5843da4167c5140/modules/fdlibm/src/math_private.h#638

sizeof(__float_t) == sizeof(long double) ? irintf(x) :	\
Flags: needinfo?(arai.unmht) → needinfo?(mh+mozilla)
Assignee: nobody → arai.unmht
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1595259

Severity: -- → S3
Priority: -- → P1
Pushed by arai_a@mac.com: https://hg.mozilla.org/integration/autoland/rev/c3c8c01f292b Do not define unused float_t type in fdlibm. r=glandium
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
Flags: needinfo?(mh+mozilla)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: