Bug 1789560 - Do not define unused float_t type in fdlibm. r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D157540